# lua-primesieve

./: CMakeLists.txt  LICENSE  README.md  array.c  iterator.c  lua-primesieve.c  lua-primesieve.h  primesieve-0.1-1.rockspec
